fix: 사진 무조건 올라가는 경우 수정

--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -44,7 +44,7 @@
                 </button>
             </div>
 
-            <div sec:authorize="isAuthenticated()">
+            <div th:if="${loginMember != null}">
                 <a th:href="@{/board/{regionMajor}/{boardId}/posts/post-new(regionMajor=${regionMajor},boardId=${boardId})}"
                    class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">
                     작성
