--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -49,19 +49,19 @@
                 <a th:href="@{/board/{regionMajor}/{boardId}/posts(regionMajor=${regionMajor},boardId=${boardId})}"
                     class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition duration-200">목록</a>
                 <!--추천 버튼-->
-                <button sec:authorize="isAuthenticated()"
+                <button th:if="${loginMember != null}"
                         th:onclick="|location.href='@{/board/{regionMajor}/{boardId}/posts/{postId}/like(regionMajor=${regionMajor},boardId=${boardId},postId=${post.id})}'|"
                         class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-700 transition duration-200">
                     <span class="material-symbols-outlined" style="font-size: 20px; vertical-align: middle;">thumb_up</span>
                     추천
                 </button>
 
-                <div sec:authorize="isAuthenticated()" th:if="${#authentication.principal.id == post.memberId}">
+                <div th:if="${loginMember != null and loginMember == post.memberId}">
                     <!--수정 버튼-->
                     <button th:onclick="|location.href='@{/board/{regionMajor}/{boardId}/posts/post-new(regionMajor=${regionMajor},boardId=${boardId},postId=${post.id})}'|"
                             class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200 mr-2">수정</button>
                     <!--삭제 버튼-->
-                    <button type="button" onclick="deletePost(this)" th:data-postId="${post.id}" th:data-region="${regionMajor}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-200">삭제</button>
+                    <button type="button" onclick="deletePost(this)" th:data-postId="${post.id}" th:data-region="${regionMajor}" th:data-board="${boardId}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-200">삭제</button>
                 </div>
             </div>
         </div>
