--- a/src/main/resources/templates/findPassword.html
+++ b/src/main/resources/templates/findPassword.html
@@ -41,7 +41,7 @@
         </div>
         <button type="submit"
                 class="w-full bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-            비밀번호 찾기
+            비밀번호 재설정
         </button>
     </form>
 </div>
