--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -6,29 +6,25 @@
 <div class="w-full max-w-screen-lg mx-auto my-5">
     <nav class="flex justify-center items-center">
         <a href="/">
-            <img src="/images/logo.png" style="width:130px" alt="로고">
+            <img src="/images/logo.png" style="width:130px">
         </a>
     </nav>
 </div>
-<!-- 아이디 찾기 -->
+
+<!-- 비밀번호 재설정 -->
 <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
-    <h2 class="text-center text-3xl font-bold text-gray-900 mb-8">아이디 찾기</h2>
-    <form th:action="@{/findId}" method="post" class="space-y-6">
+    <h2 class="text-center text-3xl font-bold text-gray-900 mb-8">비밀번호 재설정</h2>
+    <form th:action="@{/resetPassword}" method="post" class="space-y-6">
+        <input type="hidden" name="loginId" th:value="${loginId}" />
         <div>
-            <label for="name" class="sr-only">이름</label>
-            <input id="name" name="name" type="text" required
+            <label for="newPassword" class="sr-only">새로운 비밀번호</label>
+            <input id="newPassword" name="newPassword" type="password" required
                    class="w-full px-3 py-2 border border-gray-300 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                   placeholder="닉네임 입력하세요.">
-        </div>
-        <div>
-            <label for="email" class="sr-only">이메일</label>
-            <input id="email" name="email" type="email" required
-                   class="w-full px-3 py-2 border border-gray-300 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
-                   placeholder="이메일을 입력하세요.">
+                   placeholder="새 비밀번호를 입력하세요.">
         </div>
         <button type="submit"
                 class="w-full bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-            아이디 찾기
+            비밀번호 재설정
         </button>
     </form>
 </div>
@@ -43,4 +39,3 @@
 </body>
 <script src="/js/footer.js"></script>
 </html>
-
