feat: 추천수 리다이렉트 증가 방지, 중분류와 카테고리 표시(중분류 문제 해결 필요)

--- a/src/main/resources/templates/boardPosts.html
+++ b/src/main/resources/templates/boardPosts.html
@@ -7,7 +7,8 @@
 
 <div class="h-full">
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold mb-6" th:text="${regionMajor} + ' 게시판'"></h1>
+        <h1 class="text-3xl font-bold mb-6" th:text="${regionMajor} + ' ' + (${regionMiddle} != null ? ${regionMiddle} + ' ' : '') + '게시판'"></h1>
+        <h5 class="text-3xl font-bold mb-6" th:text="${boardCategory}"></h5>
 
         <div class="mb-4 flex space-x-4">
             <!--게시판 주요지역 선택-->
