--- a/src/main/resources/templates/mainboard.html
+++ b/src/main/resources/templates/mainboard.html
@@ -7,17 +7,18 @@
 <div class="flex-grow flex justify-center overflow-auto">
     <!-- 게시판 목록을 표시 -->
     <div class="container mx-auto max-w-5xl px-6 pb-20">
+        <h1 class="text-2xl font-bold mb-6 text-center">여행지 목록</h1>
         <!-- 검색창 추가 -->
-        <div class="flex justify-center mb-8">
-            <form action="/search" method="GET" class="w-full max-w-lg">
-                <div class="flex items-center border-b border-teal-500 py-2">
-                    <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-2 px-2 leading-tight focus:outline-none" type="text" placeholder="떠나고 싶은 여행지를 찾아보세요!" aria-label="검색어">
-                    <button class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-3 rounded" type="submit">
-                        검색
-                    </button>
-                </div>
-            </form>
-        </div>
+<!--        <div class="flex justify-center mb-8">-->
+<!--            <form action="/search" method="GET" class="w-full max-w-lg">-->
+<!--                <div class="flex items-center border-b border-teal-500 py-2">-->
+<!--                    <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-2 px-2 leading-tight focus:outline-none" type="text" placeholder="떠나고 싶은 여행지를 찾아보세요!" aria-label="검색어">-->
+<!--                    <button class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-3 rounded" type="submit">-->
+<!--                        검색-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div>-->
 
         <!-- 대분류 게시판 목록 -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
