--- a/src/main/resources/templates/updateboard.html
+++ b/src/main/resources/templates/updateboard.html
@@ -9,8 +9,8 @@
         <a href="javascript:history.back()" class="absolute top-0 right-0 mt-2 mr-2 bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-1 px-3 rounded">이전</a>
 
         <h2 class="text-2xl font-bold mb-6 text-center">여행지 정보 수정하기</h2>
-        <form th:action="@{/board-update/{id}(id=${board.id})}" method="post" enctype="multipart/form-data" class="space-y-4">
-            <input type="hidden" name="_method" value="PUT"/> <!-- HiddenHttpMethodFilter 사용 -->
+        <form th:action="@{/api/board-update/{id}(id=${board.id})}" method="post" enctype="multipart/form-data" class="space-y-4">
+            <!--<input type="hidden" name="_method" value="PUT"/> &lt;!&ndash; HiddenHttpMethodFilter 사용 &ndash;&gt;-->
 
             <!-- CSRF 토큰 필드를 제거했습니다. -->
 
@@ -50,13 +50,13 @@
             </div>
 
             <!-- 게시판 분류 (수정 불가) -->
-            <div>
-                <label for="boardCategory" class="block text-sm font-medium text-gray-700">카테고리</label>
-                <select id="boardCategory" name="boardCategory" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm bg-gray-100 focus:outline-none" th:value="${board.boardCategory}" disabled>
-                    <option value="여행후기" th:selected="${board.boardCategory == '여행후기'}">여행후기</option>
-                    <option value="질의응답" th:selected="${board.boardCategory == '질의응답'}">질의응답</option>
-                </select>
-            </div>
+<!--            <div>-->
+<!--                <label for="boardCategory" class="block text-sm font-medium text-gray-700">카테고리</label>-->
+<!--                <select id="boardCategory" name="boardCategory" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm bg-gray-100 focus:outline-none" th:value="${board.boardCategory}" disabled>-->
+<!--                    <option value="여행후기" th:selected="${board.boardCategory == '여행후기'}">여행후기</option>-->
+<!--                    <option value="질의응답" th:selected="${board.boardCategory == '질의응답'}">질의응답</option>-->
+<!--                </select>-->
+<!--            </div>-->
 
             <!-- 제출 버튼 -->
             <div class="text-center">
