--- a/src/main/resources/templates/middleboard.html
+++ b/src/main/resources/templates/middleboard.html
@@ -23,12 +23,17 @@
             <div th:each="board : ${middleboard}" class="bg-white shadow-md rounded-lg overflow-hidden transform transition-transform duration-300 hover:scale-105">
                 <!-- 게시글 요소를 클릭하면 URL로 이동 -->
                 <a th:href="@{'/board/' + ${board.regionMajor} + '/' + ${board.id} + '/posts'}" class="block">
-                    <img th:src="@{${board.imagePath}}" alt="이미지" class="w-full h-40 object-cover">
+                    <img th:src="'data:image/jpeg;base64,' + ${board.base64Image}"/>
                     <div class="p-4">
                         <h3 class="text-l font-semibold" th:text="${regionMajorKorean} + ' - ' + ${board.regionMiddle}"></h3>
                         <p class="text-gray-600 mt-2" th:text="${board.description}"></p>
                     </div>
                 </a>
+
+
+
+
+
                 <!-- 수정하기 및 삭제하기 버튼 -->
                 <div class="flex justify-between p-4" th:if="${loginMember != null}">
                     <a th:href="@{'/board-update/' + ${board.id}}" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-1 px-2 rounded">
