--- a/src/main/resources/templates/updateboard.html
+++ b/src/main/resources/templates/updateboard.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}"></head>
@@ -9,8 +10,9 @@
         <a href="javascript:history.back()" class="absolute top-0 right-0 mt-2 mr-2 bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-1 px-3 rounded">이전</a>
 
         <h2 class="text-2xl font-bold mb-6 text-center">여행지 정보 수정하기</h2>
-        <form th:action="@{/api/board-update/{id}(id=${board.id})}" method="post" enctype="multipart/form-data" class="space-y-4">
-            <!--<input type="hidden" name="_method" value="PUT"/> &lt;!&ndash; HiddenHttpMethodFilter 사용 &ndash;&gt;-->
+        <form enctype="multipart/form-data" class="space-y-4" th:object="${requestDto}"
+              th:data-id="${id}">
+            <!--            <input type="hidden" name="_method" value="PUT"/> <>!&#45;&#45; HiddenHttpMethodFilter 사용 &ndash;&gt;-->
 
             <!-- CSRF 토큰 필드를 제거했습니다. -->
 
@@ -19,7 +21,7 @@
                 <label for="image" class="block text-sm font-medium text-gray-700"></label>
                 <div class="flex justify-center">
                     <div class="relative h-48 w-48 border border-gray-300 rounded-md shadow-sm flex items-center justify-center bg-gray-100">
-                        <img id="imagePreview" th:src="${board.imagePath}" alt="이미지를 선택하세요" class="h-full w-full object-cover rounded-md">
+                        <img th:src="'data:image/jpeg;base64,' + ${board.base64Image}" id="imagePreview" alt="이미지를 선택하세요" class="h-full w-full object-cover rounded-md"/>
                     </div>
                 </div>
                 <!-- 이미지 변경 버튼 -->
@@ -27,7 +29,7 @@
                     <label for="image" class="bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-1 px-3 rounded cursor-pointer text-sm">
                         이미지 변경
                     </label>
-                    <input type="file" id="image" name="image" class="hidden" onchange="previewImage(event)">
+                    <input type="file" id="image" th:field="*{image}" class="hidden" onchange="previewImage(event)">
                 </div>
             </div>
 
@@ -46,17 +48,17 @@
             <!-- 여행지 설명 입력 -->
             <div>
                 <label for="description" class="block text-sm font-medium text-gray-700">설명</label>
-                <textarea id="description" name="description" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" rows="3" th:text="${board.description}" placeholder="게시판 설명 입력" required></textarea>
+                <textarea id="description" th:field="*{description}" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" rows="3" th:text="${board.description}" th:placeholder="${board.description}" required></textarea>
             </div>
 
             <!-- 게시판 분류 (수정 불가) -->
-<!--            <div>-->
-<!--                <label for="boardCategory" class="block text-sm font-medium text-gray-700">카테고리</label>-->
-<!--                <select id="boardCategory" name="boardCategory" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm bg-gray-100 focus:outline-none" th:value="${board.boardCategory}" disabled>-->
-<!--                    <option value="여행후기" th:selected="${board.boardCategory == '여행후기'}">여행후기</option>-->
-<!--                    <option value="질의응답" th:selected="${board.boardCategory == '질의응답'}">질의응답</option>-->
-<!--                </select>-->
-<!--            </div>-->
+            <div>
+                <label for="boardCategory" class="block text-sm font-medium text-gray-700">카테고리</label>
+                <select id="boardCategory" name="boardCategory" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm bg-gray-100 focus:outline-none" th:value="${board.boardCategory}" disabled>
+                    <option value="여행후기" th:selected="${board.boardCategory == '여행후기'}">여행후기</option>
+                    <option value="질의응답" th:selected="${board.boardCategory == '질의응답'}">질의응답</option>
+                </select>
+            </div>
 
             <!-- 제출 버튼 -->
             <div class="text-center">
@@ -68,16 +70,11 @@
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/footer.js"></script>
-<script>
-    function previewImage(event) {
-        var reader = new FileReader();
-        reader.onload = function () {
-            var output = document.getElementById('imagePreview');
-            output.src = reader.result;
-        };
-        reader.readAsDataURL(event.target.files[0]);
-    }
-</script>
+<script src="/js/board_update.js"></script>
 </html>
+
+
+
+
